--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-cookie": "^3.0.8",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
